@@ -1,6 +1,15 @@
 # ChangeLog for virtual/ssh
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ssh/ChangeLog,v 1.3 2012/05/29 12:40:07 aballier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/ssh/ChangeLog,v 1.6 2014/03/31 20:31:02 ulm Exp $
+
+  31 Mar 2014; Ulrich Müller <ulm@gentoo.org> ssh-0.ebuild:
+  Update to EAPI 5. Remove empty variable assignments.
+
+  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> ssh-0.ebuild:
+  Add arm64 love.
+
+  19 Feb 2013; Zac Medico <zmedico@gentoo.org> ssh-0.ebuild:
+  Add ~arm-linux keyword.
 
   29 May 2012; Alexis Ballier <aballier@gentoo.org> ssh-0.ebuild:
   keyword ~amd64-fbsd
@@ -12,4 +21,3 @@
 
   16 Apr 2011; Ulrich Mueller <ulm@gentoo.org> +ssh-0.ebuild, +metadata.xml:
   Initial import, bug 361121.
-
